# G2Demo

./: README.md  main.py
.devcontainer/: devcontainer.json
g2_ai_crew/: README.md  convertpdf.py  pyproject.toml  report.md
g2_ai_crew/db/: chroma.sqlite3
g2_ai_crew/input_txt/: Fund A - Eamon.txt  Fund A - Stuart.txt  Fund B - Alan.txt  Fund B - Stuart.txt  Fund C - Alan.txt  Fund C - Chris.txt
g2_ai_crew/knowledge/: user_preference.txt
g2_ai_crew/src/g2_ai_crew/: crew.py  main.py
g2_ai_crew/src/g2_ai_crew/config/: agents.yaml  tasks.yaml
