[project]
name = "g2_ai_crew"
version = "0.1.0"
description = "g2-ai-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
g2_ai_crew = "g2_ai_crew.main:run"
run_crew = "g2_ai_crew.main:run"
train = "g2_ai_crew.main:train"
replay = "g2_ai_crew.main:replay"
test = "g2_ai_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
